--- a/Linear Algebra.ipynb
+++ b/Linear Algebra.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pprint import pprint as p\n",
-    "from functools import reduce"
+    "from functools import reduce\n",
+    "import math\n",
+    "import matplotlib as plt"
    ]
   },
   {
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +142,7 @@
        "[10, 20, 30]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
        "[138.0, 75.0, 59.5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +222,7 @@
        "12"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,12 +235,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "내적의 개념을 사용하여 각 성분의 제곱 핪을 쉽게 구할 수 있다."
+    "내적의 개념을 사용하여 각 성분의 제곱 합을 쉽게 구할 수 있다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +260,7 @@
        "14"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,16 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +297,7 @@
        "3.7416573867739413"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +338,7 @@
        "156.35216659835578"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,11 +348,271 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 행렬\n",
+    "\n",
+    "2차원으로 구성된 숫자의 집합. 2차원 list로 표현 가능하다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A = [[1,2,3],[4,5,6]] # 2 Row, 3 Col\n",
+    "B = [[1,2],[3,4,],[4,5]] # 3 Row, 2 Col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shape(L):\n",
+    "    numOfRows=len(L)\n",
+    "    numOfCols=len(L[0]) if L else 0\n",
+    "    return numOfRows, numOfCols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shape(A))\n",
+    "print(shape(B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getRow(L,i):\n",
+    "    return L[i]\n",
+    "def getColumn(L,j):\n",
+    "    return [L_i[j] for L_i in L]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(getRow(A,0))\n",
+    "print(getColumn(A,0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "단위 행렬을 만들어 보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_matrix(num_rows, num_cols, entry_fn):\n",
+    "    \"\"\"i, j번째 원소가 entry_fn(i,j)인\n",
+    "    num_rows * num_cols 행렬을 반환\"\"\"\n",
+    "    return [[entry_fn(i, j) for j in range(num_cols)] for i in range(num_rows)]\n",
+    "\n",
+    "def is_diagonal(i, j):\n",
+    "    \"\"\"i, j가 같을 때 1이여야 대각행렬 완성\"\"\"\n",
+    "    return 1 if i == j else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0, 0, 0],\n",
+      " [0, 1, 0, 0, 0],\n",
+      " [0, 0, 1, 0, 0],\n",
+      " [0, 0, 0, 1, 0],\n",
+      " [0, 0, 0, 0, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "identity_matrix = make_matrix(5, 5, is_diagonal)\n",
+    "p(identity_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "행렬이 중요한 몇 가지 이유가 있다.\n",
+    "1. 각 벡터를 행렬의 행으로 나타냄으로써 여러 벡터로 구성된 데이터 셋을 행렬로 표현할 수 있다. 예로 3명에 대한 키, 몸무게가 주어졌다면 3 * 2 행렬로 표현 가능하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[175,66],\n",
+    "       [192,82],\n",
+    "       [155,48]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. k차원의 벡터를 n차원 벡터로 변환해주는 선형함수를 n*k 행렬로 표현할 수 있다.\n",
+    "3. 행렬로 이진관계를 나타낼 수 있다. 예로, i와 j가 연결되어 있다면 A[i][j]의 값이 1이고 그렇지 않다면 0인 행렬 A로 네트워크를 표현할 수 있다. 아래와 같이 네트워크를 표현한다면"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friendships=[(0,1), (0,2), (1,2), (1,3),(2,3),(3,4),\n",
+    "            (4,5), (5,6), (5,7), (6,8), (7,8), (8,9)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아래와 같이 행렬로 표현 가능하다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#          user 0  1  2  3  4  5  6  7  8  9\n",
+    "#\n",
+    "friendships = [[0, 1, 1, 0, 0, 0, 0, 0, 0, 0], # user 0\n",
+    "               [1, 0, 1, 1, 0, 0, 0, 0, 0, 0], # user 1\n",
+    "               [1, 1, 0, 1, 0, 0, 0, 0, 0, 0], # user 2\n",
+    "               [0, 1, 1, 0, 1, 0, 0, 0, 0, 0], # user 3\n",
+    "               [0, 0, 0, 1, 0, 1, 0, 0, 0, 0], # user 4\n",
+    "               [0, 0, 0, 0, 1, 0, 1, 1, 0, 0], # user 5\n",
+    "               [0, 0, 0, 0, 0, 1, 0, 0, 1, 0], # user 6\n",
+    "               [0, 0, 0, 0, 0, 1, 0, 0, 1, 0], # user 7\n",
+    "               [0, 0, 0, 0, 0, 0, 1, 1, 0, 1], # user 8\n",
+    "               [0, 0, 0, 0, 0, 0, 0, 0, 1, 0]] # user 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "만약 네트워크에서 연결된 사용자 수가 적다면 행렬은 수많은 0 값을 저장하기에 네트워크를 표현하기에 더 비효율 적일 것. \n",
+    "\n",
+    "하지만 행렬에서는 두 사용자가 연결되어있는지 빠르게 확인할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def IsFriendships(L,row,col):\n",
+    "    if bool(L[row][col]):\n",
+    "        print(str(row)+\"와 \"+str(col)+\"은 친구입니다.\")\n",
+    "    else:\n",
+    "        print(str(row)+\"와 \"+str(col)+\"은 친구가 아닙니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0와 2은 친구입니다.\n",
+      "0와 8은 친구가 아닙니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "IsFriendships(friendships,0,2)\n",
+    "IsFriendships(friendships,0,8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "사용자가 누구와 연결되어 있는지 알아보기 위해 해당 사용자를 나타내는 열 혹은 행만 살펴보몬 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connFriends=[i for i, is_friend in enumerate(friendships[5]) if is_friend]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 7]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connFriends"
+   ]
   }
  ],
  "metadata": {
