ch06 being edited

--- a/ch06_probability.ipynb
+++ b/ch06_probability.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 확률\n",
+    "\n",
+    "확률은 어떤 사건이 선택될 때 발생하는 불확실 성을 수치적으로 나타낸 것이며 특정 사건 E가 발생활 확률을 P(E)라 한다.\n",
+    "\n",
+    "### 1. 종속성과 독립성\n",
+    "사건 E 발생 여부가 사건 F의 발생 여부에 대한 정보를 제공할 경우 E와 F는 종속사건, 아니라면 두 사건은 서로 독립 사건이다.\n",
+    "사건 E,F가 동시에 발생한 확률이 각각 사건이 발생할 확률의 곱과 같다면 두 사건은 독립사건을 의미한다.\n",
+    "\n",
+    "***P(E,F) = P(E)P(F)***\n",
+    "\n",
+    "### 2. 조건부 확률\n",
+    "두 사건이 반드시 독립 사건이라는 보장이 없고, 사건 F의 확률이 =! 0일 경우, 사건 E가 발생할 확률을 아래와 같이 정의 가능하다.\n",
+    "\n",
+    "***P(E|F) = P(E,F) / P(F)***\n",
+    "\n",
+    "***P(E,F) = P(E|F) P(F)***\n",
+    "\n",
+    "따라서 사건 E,F가 독립사건이라면 아래와 같은 식이 성립된다.\n",
+    "\n",
+    "***P(E|F) = P(E)***\n",
+    "\n",
+    "아래 코드는 큰 아이가 딸이면서 둘 다 딸일 확률, 둘 중 한 명이 딸이면서 둘 다 딸일 확률을 의미한다.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -27,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -50,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -84,11 +108,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 베이즈 정리\n",
+    "베이즈 정리는 조건부 확률을 반대로 뒤집는 정리이다. 사건 F가 발생하고 P(E)가 필요한 경우, 사건 E가 발생했다는 가정하에 P(F)만 주어졌다면 조건부 확률의 정의를 두 번 사용하여 아래와 같은 식을 유도할 수 있다.\n",
+    "\n",
+    "***P(E|F) = P(E,F)|P(F) = P(F|E)P(E)|P(F)***\n",
+    "\n",
+    "P(F)는 'F, E모두 발생하는 경우'와 'F는 발생하지만 E는 발생하지 않은 상호 배타적인 두 사건이다.\n",
+    "\n",
+    "***P(F) = P(F,E) + P(F,!E)***\n",
+    "\n",
+    "따라서 다음과 같이 베이즈 정리를 유도할 수 있다.\n",
+    "\n",
+    "***P(E|F) = P(F|E)P(E) / [P(F|E)P(E) + P(F|!E)P(!E)]***\n",
+    "\n",
+    "### 4. 확률변수\n",
+    "확률변수는 특정 확률분포와 연관되어 있는 변수를 의미한다. 예로, 동전 던지기에서 앞뒷면이 나올 확률은 각각 0.5이다. 모든 확률변수의 확률을 해당 확률변수의 값으로 가중편균한 값인 확률변수의 기댓값으로 도출할 수 있다. 예로 동전던지기의 기댓값은 ***0(뒷면) * 1/2 + 1(앞면)* 1/2 = 1/2*** 이다.\n",
+    "\n",
+    "### 5. 연속분포\n",
+    "동전던지기는 이산형 분포를 따르지만 대부분 경우 연속적인 결과에 대한 분포를 사용해서 모델을 만든다. 균등분포는 0~1의 모든 값에 동등한 비중을 준 분포이다. 0~1 사이에 무한히 많은 수가 존재하기에, 숫자 하나의 비중은 0일 것이다. 이러한 이유로 밀도함수를 특정 구간에서 적분한 값으로 확률을 나타내는 확률밀도함수로 연속분포를 표현한다.\n",
+    "\n",
+    "아래는 균등 분포의 확률 밀도함수를 코드로 작성한 것이다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def uniform_pdf(x):\n",
@@ -116,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -144,9 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -176,11 +220,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -211,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -254,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -318,9 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -367,9 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -410,9 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -433,7 +470,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -447,9 +484,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
